# cli_personal_assistent

./: .gitignore  Dockerfile  addressbook.py  file_utils.py  main.py  pyproject.toml
