[tool.poetry]
name = "cli_personal_assistent"
version = "0.1.0"
description = ""
authors = ["gozilla <wpdr5r@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.18"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
